added edit and delete task function

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,8 @@
             android:name="com.moa.tasktimer.MainActivityFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_main" />
 <!--            tools:layout="@layout/fragment_main" />-->
         <FrameLayout
             android:id="@+id/task_details_container"
